Working TODO fix zadani.ser